--- a/about.css
+++ b/about.css
@@ -2,30 +2,21 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #ebdede;
+    background-color: #fefeff;
 }
 
-.container {
-    display: flex;
-    width: 80%;
-    color:black;
-    max-width: 900px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    margin: 20px auto;
-    background-color: #fff;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-}
+
 
 .left-section {
    
-    background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
+    background-color:rgb(218, 214, 214);
+    padding: 100px;
+    text-align:center;
 }
 
 .right-section {
     width: 65%;
-    padding: 20px;
+    padding: 100px;
 }
 .profile-picture {
     margin-bottom: 20px;
@@ -34,37 +25,43 @@ body {
   .profile-picture img {
     width: 100%;
     height: 150px;
-    object-fit: cover;
     border-radius: 50%;
   }
   
-  .contact, .profile, .skills, .languages, .hobbies {
+ .skill h4, .language h4, .hobbies h4 {
     margin-bottom: 20px;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 25px;
   }
   
-  .contact h2, .profile h2, .skills h2, .languages h2, .hobbies h2 {
-    margin-top: 0;
+ .skill , .language , .hobbies {
+  font-size: 20px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
   .right-section h1 {
     margin-top: 0;
     display: flex;
   }
-  
-  .education ul{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    padding-right: 20px;
-    margin-bottom: 20px;
-    width: 65%;
-  }
+
+  .about h3 {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
+}
+.about{
+  font-size: 20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif ;
+}
+
   
 .education h4 {
-    font-family: 'Times New Roman', Times, serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 29px;
   }
   
   
-  .education h3 {
-    margin-bottom: 5px;
+  .education  {
+   font-size: 20px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
   
 
